# triage-ai-medical-vision

./: Dockerfile.frontend  README.md  coverage.config.js  deploy_local.sh  dfx.json  docker-compose.yml  env.example  index.html  package-lock.json  package.json  requirements.txt  vitest.config.ts
.github/workflows/: test.yml
agents/: __init__.py  base_agent.py  patient_agent.py
backend/: asi_one_service.py  requirements.txt
docs/: ARCHITECTURE.md  ASI_AGENT_DEPLOYMENT.md  ASI_ONE_INTEGRATION_README.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  HACKATHON_SUBMISSION.md  IMAGE_AGENTS_DEPLOYMENT.md  MCP_SYSTEM_DEPLOYMENT.md  NLP_SYSTEM_README.md  SETUP.md  VOICE_AI_README.md  WALLET_GATED_FLOW_README.md
innovation-lab-examples-main/: README.md
innovation-lab-examples-main/cursor-rules/: README.md
innovation-lab-examples-main/deploy-agent-on-av/: docs.md
innovation-lab-examples-main/frontend-integration/: README.md  frontend_app.py  product_info_agent.py  product_search_agent.py  requirements.txt
monitoring/: prometheus.yml
src/: index.css  setupTests.ts
src/backend/: Cargo.toml  main.mo
src/backend/src/: greyguard_trials.did  lib.rs
src/components/: ASIProtocol.tsx  AgentChat.tsx  AgentIntegration.tsx  AgentPlatformPage.tsx  AnalyticsPage.tsx  ChatInput.tsx  ChatPage.tsx  ChatbotShowcase.tsx  ClinicalTrialsPage.tsx  DecentralizedFeaturesPage.tsx  DemoConversationInterface.tsx  EnhancedAgentChat.tsx  FetchAgentShowcase.tsx  HomePage.tsx  ImageAgents.tsx  InnovationLabDashboard.tsx  LandingPage.tsx  LanguageSelector.tsx  MCPSystem.tsx  MainApp.tsx  (+9 more)
(+179 files in other folders)
