[package]
name = "greyguard_trials"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.0"
ic-stable-structures = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
candid = "0.10.0"
ic-cdk-timers = "0.2.0"
